crates/core/tests/snapshots/container_schema_test__schematic__named_struct.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty(container.impl_schematic())
---
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Renamed".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema.set_deprecated("Use something else.");
        schema.set_description("Container docs.");
        schema
            .structure(
                StructType::new([("a".into(), SchemaField::new(schema.infer::<bool>()))]),
            )
    }
}
#[automatically_derived]
impl schematic::Schematic for PartialExample {
    fn schema_name() -> Option<String> {
        Some("PartialExample".into())
    }
    fn build_schema(schema: schematic::SchemaBuilder) -> schematic::Schema {
        let mut schema = <Example as schematic::Schematic>::build_schema(schema);
        schematic::internal::partialize_schema(&mut schema, true);
        schema
    }
}
