crates/core/tests/snapshots/container_schema_test__schematic__unit_enum.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty(container.impl_schematic())
---
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .enumerable(
                EnumType::from_schemas(
                    [
                        Schema {
                            name: Some("A".into()),
                            ty: Schema::literal_value(LiteralValue::String("A".into()))
                                .ty,
                            ..Default::default()
                        },
                        Schema {
                            name: Some("B".into()),
                            ty: Schema::literal_value(LiteralValue::String("B".into()))
                                .ty,
                            ..Default::default()
                        },
                    ],
                    None,
                ),
            )
    }
}
#[automatically_derived]
impl schematic::Schematic for PartialExample {
    fn schema_name() -> Option<String> {
        Some("PartialExample".into())
    }
    fn build_schema(schema: schematic::SchemaBuilder) -> schematic::Schema {
        let mut schema = Example::build_schema(schema);
        schematic::internal::partialize_schema(&mut schema, true);
        schema
    }
}
