crates/core/tests/snapshots/container_schema_test__schematic__unnamed_struct.snap
---
source: crates/core/tests/container_schema_test.rs
expression: pretty(container.impl_schematic())
---
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema.tuple(TupleType::new([schema.infer::<bool>(), schema.infer::<usize>()]))
    }
}
#[automatically_derived]
impl schematic::Schematic for PartialExample {
    fn schema_name() -> Option<String> {
        Some("PartialExample".into())
    }
    fn build_schema(schema: schematic::SchemaBuilder) -> schematic::Schema {
        let mut schema = Example::build_schema(schema);
        schematic::internal::partialize_schema(&mut schema, true);
        schema
    }
}
